syntax = "proto3";
package empowerchain.empowerchain.proofofexistence;

import "gogoproto/gogo.proto";
import "empowerchain/proofofexistence/proof.proto";

option go_package = "github.com/empowerchain/empowerchain/x/proofofexistence/types";

// GenesisState defines the proofofexistence module's genesis state.
message GenesisState {
  repeated Proof proofList = 1 [(gogoproto.nullable) = false];
}
